  bug#9948 changed client-charset behavior in 4.1.x libmysql, which issue BC prob

sql_parse.cc:
mysqld.cc:

  Added --skip-client-character-set-handshake.
  When this option is activated, client side character set
  (which is sent in handshake) is ignored, and server side
  default-character-set value is used for character_set_client
  and character_set_results, thus reprodicing 4.0 behaviour.